--- a/style.css
+++ b/style.css
@@ -40,10 +40,6 @@ html, body {
     user-select: none;
     -webkit-user-select: none;
     -webkit-tap-highlight-color: transparent;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     text-align: center;
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.001) 1px, transparent 1px), 
                       linear-gradient(to right, rgba(0,0,0,0.001) 1px, transparent 1px);
@@ -96,7 +92,7 @@ h1 {
 }
 
 .knob-container {
-    max-width: 600px;
+    max-width: 20rem;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -495,7 +491,7 @@ h1 {
 }
 
 header {
-    width: 100%;
+    grid-column: span 3;
 }
 
 .track-selector {
