--- a/src/style.css
+++ b/src/style.css
@@ -29,11 +29,11 @@
     box-sizing: border-box;
 }
 
-html, body {
+ html, body {
     font-size: min(1.25rem, 5vw);
     overscroll-behavior: none; /* Disable pull-to-refresh */
     margin: 0;
-    padding: 2rem 0 2rem 0; /* Top padding for top bar, bottom padding for tab navigation */
+    padding: 3rem 0 0 0;
     font-family: "Helvetica Neue", Arial, sans-serif;
     background-color: var(--bg-color);
     color: var(--text-color);
@@ -52,20 +52,25 @@ h1 {
     margin-bottom: 0.5rem;
 }
 
-.top-bar {
+ .top-bar {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.5rem 1rem;
+    flex-direction: column;
     border-bottom: 1px solid var(--knob-border);
     background: rgba(226, 226, 228, 0.8);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     z-index: 100;
+}
+
+.top-bar-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 1rem;
 }
 
 .app-title {
@@ -671,17 +676,12 @@ header {
     letter-spacing: 2px;
 }
 
-.tab-navigation {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
+ .tab-navigation {
     display: flex;
     background: rgba(208, 208, 211, 0.8);
     border-top: 1px solid var(--knob-border);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    z-index: 100;
 }
 
 .tab-button {
@@ -1128,10 +1128,10 @@ header {
     color: var(--text-color);
 }
 
-.fullscreen-toggle-btn {
+ .fullscreen-toggle-btn {
     position: fixed;
-    right: 0.1rem;
-    bottom: 0.1rem;
+    right: 0.5rem;
+    bottom: 1rem;
     color: var(--text-color);
     background-color: transparent;
     border: none;
@@ -1144,6 +1144,7 @@ header {
     font-size: 1.2rem;
     cursor: pointer;
     transition: background 0.2s, box-shadow 0.2s;
+    z-index: 101;
 }
 .fullscreen-toggle-btn #fullscreen-icon {
     font-size: 1.1em;
@@ -1231,7 +1232,7 @@ header {
     position: relative;
     display: flex;
     width: 100vw;
-    height: 6rem;
+    height: 7rem;
     background: var(--bg-color);
     border-radius: 0.25rem;
     margin: 0 -1rem;
